--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.29.0",
     "react-router-hash-link": "^2.4.3",
