--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "my_portfolio": "file:",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
